# strawberry_miniproject

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  package.xml
config/: environment.yaml  gz_controllers.yaml  place_slots.yaml  regions.yaml
config/curobo/: e0509_gripper.urdf  e0509_gripper.yml  e0509_gripper_measured_tcp.yml  e0509_spheres.yml
docs/: GRIPPER_BIDIRECTIONAL_DIAGNOSIS_20260615.md  HANDOFF_20260611_MEASURED_TCP.md  HANDOFF_20260611_PLACE_CUROBO.md  HANDOFF_20260614_PLACE_TRAY_GRID.md  HANDOFF_20260615_SAFEGRASP_NW_NEXT.md  HARVEST_EXPERIMENT_OPERATION_PLAN_20260615.md  NOTION_UPDATE_AFTER_SW_HARVEST_20260615.md  NW_OCCLUSION_KPI_AND_GRASP_DIRECTION_20260615.md  SAFE_GRASP_STANDALONE_TEST_20260615.md  close_range_perception_limit_20260604.md  experiment_results.md  gripper_automatic_grasp_verification.md  harvest_kpi_input_guide.md  harvest_motion_session_20260607.md  harvest_motion_session_20260608.md  harvest_motion_session_20260609.md  harvest_motion_session_20260611.md  harvest_motion_session_20260612.md  harvest_test_strategy_20260604.md  project_retrospective_portfolio_roadmap.md  runtime_pipeline_and_simulation_logs.md  sw_single_strawberry_harvest_notion_20260609.md  sw_single_strawberry_harvest_portfolio_20260609.md  sw_single_strawberry_harvest_retrospective_20260609.md  sw_single_strawberry_harvest_work_retrospective_20260609.md  system_architecture.md  tool_geometry_measurement_20260611.md  tray_localization_20260604.md
include/e0509_gripper_description/: modbus_rtu.hpp
launch/: bringup.launch.py  bringup_gazebo.launch.py  curobo_vision.launch.py  environment_visualization.launch.py
reports/harvest_kpi/: manual_labels_root_nw.csv
scripts/: check_harvest_logging.py  collect_gripper_feedback.py  curobo_planner_node.py  diagnose_gripper_read.py  digital_twin_bridge.py  environment_visualizer.py  generate_harvest_kpi_report.py  generate_runtime_summary_plot.py  gripper_joint_publisher.py  gripper_service_node.py  joint_jog_control.py  label_harvest_attempt.py  marker_tracking_node.py  object_tracking_node.py  pick_place_node.py  prepare_harvest_label_sheet.py  run_safe_grasp_trial.py  runtime_jsonl_logger.py  safe_grasp_ros_adapter.py  set_experiment_context.py  strawberry_fusion_node.py  strawberry_yolo_node.py  summarize_harvest_kpis.py  summarize_runtime_kpis.py  teach_place_slots.py  validate_runtime_jsonl.py
scripts/sim2real/: CALIBRATION_GUIDE.md  CALIBRATION_README.md  README.md  TODO_CALIBRATION_VERIFY.md  __init__.py  auto_hand_eye_calibration.py  coordinate_transformer.py  generate_checkerboard.py  hand_eye_calibration.py  manual_hand_eye_calibration.py  pen_detector.py  policy_loader.py  robot_observation.py  run_pen_tracking.py  run_sim2real.py  sim2real_bridge.py  test_ik_move.py  test_observation.py  verify_calibration.py
src/: gripper_service_node.cpp
srv/: FlangeSerialClose.srv  FlangeSerialOpen.srv  FlangeSerialRead.srv  FlangeSerialWrite.srv
urdf/: e0509_with_gripper.urdf.xacro
