<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e0509_gripper_description</name>
  <version>0.0.1</version>
  <description>Doosan E0509 with RH-P12-RN-A Gripper</description>
  <maintainer email="fhekwn549@naver.com">fhekwn549</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>dsr_description2</depend>
  <depend>rh_p12_rn_a_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
